Changing data types & logical operations

--- a/02. Data types.ipynb
+++ b/02. Data types.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "abc25a2c-97ac-4236-9d91-b07cba9a3aaf",
    "metadata": {},
    "outputs": [],
@@ -22,8 +22,9 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/10/07 15:00:42 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/10/07 15:00:43 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "23/10/08 10:48:41 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/10/08 10:48:41 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "23/10/08 10:48:41 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
      ]
     }
    ],
@@ -47,7 +48,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://npn-ideapad-2023:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://npn-ideapad-2023:4042\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -63,7 +64,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fc916d880a0>"
+       "<pyspark.sql.session.SparkSession at 0x7fd1d0753b20>"
       ]
      },
      "execution_count": 4,
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "16d740e0-d584-4519-a922-a5eb369a1efd",
    "metadata": {},
    "outputs": [],
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "07fce78e-0406-4817-8089-b9b5dc985dc6",
    "metadata": {},
    "outputs": [
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "344906b5-c31f-470a-9828-05a4e034ec70",
    "metadata": {},
    "outputs": [
@@ -141,7 +142,7 @@
        "pyspark.sql.dataframe.DataFrame"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "85b53a4e-a475-4fd8-b9f2-93b8e1bfcf9d",
    "metadata": {},
    "outputs": [
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "05d98551-16ed-4f76-996c-15cf3cb64f29",
    "metadata": {},
    "outputs": [],
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "babd6d66-3d62-4865-af44-3ca4d1dbbd7b",
    "metadata": {},
    "outputs": [
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "510db77e-17a2-423d-9f2f-7d7bccb1499f",
    "metadata": {},
    "outputs": [],
@@ -227,11 +228,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "a0542a66-42ac-4066-9ea3-34df694ebbe4",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -250,6 +249,51 @@
    ],
    "source": [
     "pii_df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "655b200c-e338-438e-b025-75d75ca74be8",
+   "metadata": {},
+   "source": [
+    "- Changing Data types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1220cf2b-4b10-476e-bafd-6d7df7f27fbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change the datatype of the \"Age\" column from integer to string\n",
+    "from pyspark.sql.functions import col\n",
+    "df_temp = pii_df.withColumn(\"Age\", col(\"Age\").cast(\"string\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1c12e01c-f128-4664-aa48-b011ad8767c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- Name: string (nullable = true)\n",
+      " |-- Sex: string (nullable = true)\n",
+      " |-- Age: string (nullable = true)\n",
+      " |-- Address: string (nullable = true)\n",
+      " |-- Email: string (nullable = true)\n",
+      " |-- Phone Number: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_temp.printSchema() # Now, datatype of age converted to string"
    ]
   },
   {
