--- a/04. Filter Operations.ipynb
+++ b/04. Filter Operations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b6ea1afc-0250-4729-8f2f-0a0258eed8d5",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d9c3f448-4a11-4948-8550-667aa110bf5b",
    "metadata": {},
    "outputs": [
@@ -22,10 +22,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/10/07 20:31:25 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/10/07 20:31:26 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "23/10/07 20:31:26 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
-      "23/10/07 20:31:26 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n"
+      "23/10/08 09:07:39 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -35,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "16213e50-9cc3-4222-8d43-7caeaa620ecc",
    "metadata": {},
    "outputs": [],
@@ -46,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "db36490e-fe6e-41b0-811d-8c0e2b0ecfd1",
    "metadata": {},
    "outputs": [
@@ -71,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "2bd2cc6c-5d7b-489c-879d-124ffb33194a",
    "metadata": {},
    "outputs": [
@@ -106,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "66295210-d31a-4b38-8678-286cdaf862a3",
    "metadata": {},
    "outputs": [
@@ -146,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "0325fbb4-83c1-45cf-8e3a-297bbe2d6014",
    "metadata": {},
    "outputs": [
@@ -186,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "c152875c-318f-4ee3-a388-db606103af19",
    "metadata": {},
    "outputs": [
@@ -226,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "24c811cd-1da2-420d-ba3f-593781079f74",
    "metadata": {},
    "outputs": [
@@ -255,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "259978e5-8370-491a-920f-71798f8c8060",
    "metadata": {},
    "outputs": [
@@ -293,8 +290,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "66be1d8c-4bc8-46b1-82aa-0ce8e0c30c55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------+---+------+--------------------+--------------------+------+\n",
+      "|             Name|Age|   Sex|             Address|             Contact|Salary|\n",
+      "+-----------------+---+------+--------------------+--------------------+------+\n",
+      "|   Robert Johnson| 35|  Male| 789 Oak St, Village|  robert@example.com| 60000|\n",
+      "|    Michael Brown| 40|  NULL|222 Cedar St, County| michael@example.com| 70000|\n",
+      "|     Sarah Wilson| 33|Female|333 Maple St, Suburb|   sarah@example.com|  NULL|\n",
+      "|      William Lee| 38|  NULL|666 Pinecrest St,...| william@example.com|  NULL|\n",
+      "|    Olivia Taylor| 31|Female|777 Elmwood St, C...|  olivia@example.com| 57000|\n",
+      "|Christopher Davis| 34|  Male|111 Oakside St, V...|   chris@example.com| 61000|\n",
+      "|     Joseph Smith| 37|  Male|333 Birchwood St,...|  joseph@example.com| 63000|\n",
+      "|     David Wilson| 36|  Male|555 Pinehurst St,...|   david@example.com| 64000|\n",
+      "|  Benjamin Taylor| 39|  Male|777 Cedarhurst St...|benjamin@example.com| 65000|\n",
+      "+-----------------+---+------+--------------------+--------------------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# not operation\n",
+    "df.filter(~(df[\"Salary\"]>30000) & (df[\"Salary\"]<50000) | (df[\"Age\"]>30)).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82abf87d-b31e-47ae-934e-88a984eb6b88",
    "metadata": {},
    "outputs": [],
    "source": []
