--- a/01. Basics.ipynb
+++ b/01. Basics.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "880ca90e-b7c7-40fc-ac19-8093191e0933",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "6b2b32ab-6871-4bc4-99f8-4b5d8ed8704d",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "4  111-222-3333  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "d1ed1b6d-134d-4a33-a615-0c96041ea208",
    "metadata": {},
    "outputs": [],
@@ -143,10 +143,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "9bf70e7d-7ff3-4924-b223-1516045180e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/10/09 08:57:00 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/10/09 08:57:01 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "23/10/09 08:57:01 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
+      "23/10/09 08:57:01 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n",
+      "23/10/09 08:57:01 WARN Utils: Service 'SparkUI' could not bind on port 4043. Attempting port 4044.\n"
+     ]
+    }
+   ],
    "source": [
     "# Create spark session: big_data\n",
     "spark_session = SparkSession.builder.appName(\"big_data\").getOrCreate()"
@@ -154,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "a1ad9aee-3f40-4b2a-b587-cc2d55869875",
    "metadata": {},
    "outputs": [
@@ -168,7 +182,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://npn-ideapad-2023:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://npn-ideapad-2023:4044\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -184,10 +198,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f5d08ab10a0>"
+       "<pyspark.sql.session.SparkSession at 0x7fc7d5f06700>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "c8c0de14-7a42-48c2-844f-2a87adea36d2",
    "metadata": {},
    "outputs": [],
@@ -211,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "db3e02e7-15f5-49a9-959f-8eebe1540b8e",
    "metadata": {},
    "outputs": [
@@ -254,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "id": "ad9916b1-2c50-426b-b672-8b2b968e2c99",
    "metadata": {},
    "outputs": [],
@@ -273,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "id": "ba8e5294-6070-41c4-af06-b09f3d6152e4",
    "metadata": {
     "scrolled": true
@@ -319,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "efa7c324-4d85-4660-8770-0e0621d6ba2d",
    "metadata": {},
    "outputs": [
@@ -348,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "2b51990c-079d-4f4e-b81a-e4bcdd754748",
    "metadata": {},
    "outputs": [
@@ -362,7 +376,7 @@
        " Row(Name='James Wang', Sex='Male', Age='32', Address='567 Pine St, City E', Email='james.wang@example.com', Phone Number='111-222-3333')]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "id": "c7ecc450-412b-461b-b714-cef687c99e95",
    "metadata": {},
    "outputs": [
@@ -387,13 +401,34 @@
        " Row(Name='Lily Hall', Sex='Female', Age='33', Address='432 Pine St, City NN', Email='lily.hall@example.com', Phone Number='333-555-6666')]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "spark_df.tail(5) # get last 5 rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e8033c77-ac99-4e79-82ac-c3a97cf85056",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Name', 'Sex', 'Age', 'Address', 'Email', 'Phone Number']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spark_df.columns # list columns"
    ]
   },
   {
