--- a/05. aggregation Methods.ipynb
+++ b/05. aggregation Methods.ipynb
@@ -360,19 +360,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "54fa6720-68a7-4bc7-9bb8-93204bea1617",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'GroupedData' object has no attribute 'select'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Group by department, get average salary\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroupBy\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mDepartment\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mselect\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSalary\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;241m.\u001b[39mshow()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'GroupedData' object has no attribute 'select'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+--------+-----------+\n",
+      "|Department|avg(Age)|avg(Salary)|\n",
+      "+----------+--------+-----------+\n",
+      "|     Sales|    31.8|    58200.0|\n",
+      "|        HR|    34.0|    64400.0|\n",
+      "|   Finance|    33.6|    66400.0|\n",
+      "| Marketing|    32.8|    62800.0|\n",
+      "|        IT|    41.0|    72600.0|\n",
+      "+----------+--------+-----------+\n",
+      "\n"
      ]
     }
    ],
